# transformers-eff

./: CHANGELOG.md  ChangeLog.md  Control-Effect-Environment.html  Control-Effect-Exception.html  Control-Effect-IO.html  Control-Effect-Nondeterminism.html  Control-Effect.html  doc-index.html  effect-interpreters.cabal  index-frames.html  index.html  mini_Control-Effect-Environment.html  mini_Control-Effect-Exception.html  mini_Control-Effect-IO.html  mini_Control-Effect-Nondeterminism.html  mini_Control-Effect.html  shell.nix  stack.yaml  transformers-eff.cabal
Control/: Effect.hs
Control/Effect/: Coroutine.hs  Environment.hs  Exception.hs  IO.hs  Identity.hs  Nondeterminism.hs  State.hs
benchmark/: Bench.hs  BenchMe.hs  BenchTransformers.hs
