name:                transformers-eff
synopsis:            An approach to managing composable effects, ala mtl/transformers/extensible-effects/Eff
version:             0.2.0.0
homepage:            https://github.com/ocharles/transformers-eff
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:
category:            Control
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Effect, Control.Effect.Environment, Control.Effect.Nondeterminism, Control.Effect.Exception, Control.Effect.IO, Control.Effect.State, Control.Effect.Identity
  -- other-modules:
  other-extensions:    TypeOperators, DeriveDataTypeable, DefaultSignatures, DeriveFunctor, StandaloneDeriving, ExistentialQuantification, FlexibleContexts, FlexibleInstances, FunctionalDependencies, KindSignatures, RankNTypes, UndecidableInstances, MultiParamTypeClasses, GeneralizedNewtypeDeriving
  build-depends:       base >=4.8 && <5, transformers >=0.4 && <0.6, list-transformer, free, mmorph
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -Wall

benchmark oleg
  build-depends: base, effect-interpreters, criterion, mtl, pipes, transformers
  hs-source-dirs: benchmark
  main-is: Bench.hs
  type: exitcode-stdio-1.0
  ghc-options: -O2
